@@ -1,3 +1,9 @@
+2015-05-04  James Anderson  <anderson@gfz-potsdam.de>
+
+	* src/fitsCT.c:
+	* src/fitsMC.c:
+	* src/fitsSO.c: Bugfixes to make things compile
+
 2015-04-29  James Anderson  <anderson@gfz-potsdam>
 
 	* src/fitsCT.c: update for new delay server returning model
